src/objects/Application_Preference__c.object
<CustomObject>
    <description>Stores a &quot;snapshot in time&quot; of which preferences were claimed or opted-out of for each application, and any related application members (household members), if applicable.</description>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <description>Additional details for preference, e.g. DTHP Certificate Number</description>
        <inlineHelpText>Enter additional details for this preference.</inlineHelpText>
        <label>Additional Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Is_Submitted__c</fullName>
        <formula>ISPICKVAL( Application__r.Status__c , &apos;Submitted&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Application Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Member Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Application__c</field>
                <operation>equals</operation>
                <valueField>Application_Member__c.Application__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Application_Member__c</referenceTo>
        <relationshipLabel>Application Preferences</relationshipLabel>
        <relationshipName>Application_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <formula>TEXT(Application__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>The related Application that this preference was saved for.</description>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Preferences</relationshipLabel>
        <relationshipName>Application_Preferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Auto_Grant_Count__c</fullName>
        <description>Total number of application preferences this preference is auto granted by</description>
        <inlineHelpText>For example: Live/Work can be triggered in general by NRHP, DTHP - if this application qualifies for both nhrp and dthp the sum here would be 2</inlineHelpText>
        <label>Auto Grant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Grants_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>parent application preference</description>
        <label>Auto Grants Preference</label>
        <referenceTo>Application_Preference__c</referenceTo>
        <relationshipLabel>Application Preferences</relationshipLabel>
        <relationshipName>Application_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_combined_individual_preference__c</fullName>
        <description>If selected preference is combined, this field captures the individual preference they may have selected on the front end.</description>
        <inlineHelpText>The individual preference selected, if this is a combined preference lottery bucket.</inlineHelpText>
        <label>If combined, individual preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live in SF</fullName>
                </value>
                <value>
                    <fullName>Work in SF</fullName>
                </value>
                <value>
                    <fullName>Assisted Housing</fullName>
                </value>
                <value>
                    <fullName>Rent Burdened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Auto_Granted__c</fullName>
        <formula>Auto_Grant_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Granted From Other Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Listing_ID__c</fullName>
        <formula>Application__r.Listing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Listing ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing_Preference_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listing Preference Number</label>
        <referenceTo>Listing_Lottery_Preference__c</referenceTo>
        <relationshipLabel>Application Preferences</relationshipLabel>
        <relationshipName>Application_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lottery_Status__c</fullName>
        <label>Pre-Lottery Validation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
                <value>
                    <fullName>Valid for lottery</fullName>
                </value>
                <value>
                    <fullName>Invalid for lottery</fullName>
                </value>
                <value>
                    <fullName>Valid - Added</fullName>
                </value>
                <value>
                    <fullName>Does not receive preference</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Needs pre-lottery validation</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Receives preference</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MOHCD_Preference_Assertion__c</fullName>
        <description>Allows MOHCD Admin to manually qualify a person. When set to &quot;Valid for Lottery&quot;, &quot;Receives Preference&quot; is changed to &quot;True&quot;.</description>
        <label>MOHCD Preference Assertion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Valid for lottery</fullName>
                </value>
                <value>
                    <fullName>Invalid for lottery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If user actively opted-out of this preference, the relationship will be created and this box will be checked. May or may not have a related application member. Status will remain blank.</description>
        <label>Applicant Opted Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_who_claimed_Name__c</fullName>
        <formula>Application_Member__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference_Lottery_Rank__c</fullName>
        <label>Preference Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preference_Name__c</fullName>
        <formula>Listing_Preference_ID__r.Preference_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference_Order__c</fullName>
        <formula>Listing_Preference_ID__r.Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preference Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receives_Preference__c</fullName>
        <formula>OR(

And(Auto_Grant_Count__c &gt; 0,NOT(ISPICKVAL(MOHCD_Preference_Assertion__c, &apos;Invalid for lottery&apos;))),
AND(NOT(ISBLANK(Application_Member__c)), NOT(ISPICKVAL(Lottery_Status__c, &apos;Invalid for lottery&apos;)), NOT(ISPICKVAL(MOHCD_Preference_Assertion__c, &apos;Invalid for lottery&apos;))), 
ISPICKVAL(Lottery_Status__c, &apos;Valid - Added&apos;),
ISPICKVAL(MOHCD_Preference_Assertion__c, &apos;Valid for lottery&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receives Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_proof__c</fullName>
        <label>Type of Proof</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telephone bill</fullName>
                </value>
                <value>
                    <fullName>Cable and internet bill</fullName>
                </value>
                <value>
                    <fullName>Gas bill</fullName>
                </value>
                <value>
                    <fullName>Electric bill</fullName>
                </value>
                <value>
                    <fullName>Garbage bill</fullName>
                </value>
                <value>
                    <fullName>Water bill</fullName>
                </value>
                <value>
                    <fullName>Paystub</fullName>
                </value>
                <value>
                    <fullName>Public benefits record</fullName>
                </value>
                <value>
                    <fullName>School record</fullName>
                </value>
                <value>
                    <fullName>Paystub with employer address</fullName>
                </value>
                <value>
                    <fullName>Letter from employer</fullName>
                </value>
                <value>
                    <fullName>Letter documenting homelessness</fullName>
                </value>
                <value>
                    <fullName>Lease and rent proof</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Third-Party Proof of SF Homelessness</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application Preference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000000000}</displayFormat>
        <label>Application Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>